--- a/PMS-PropertyHapa.Staff/Views/Accounting/Billing.cshtml
+++ b/PMS-PropertyHapa.Staff/Views/Accounting/Billing.cshtml
@@ -11,7 +11,7 @@
                 <div class="col-12">
                     <h3>Billing</h3>
                     <ol class="breadcrumb">
-                        <li class="breadcrumb-item"><a class="home-item" href="index.html"><i data-feather="home"></i></a></li>
+                        <li class="breadcrumb-item"><a class="home-item" href="Index"><i data-feather="home"></i></a></li>
                         <li class="breadcrumb-item">Billing</li>
                         <li class="breadcrumb-item active">list</li>
                     </ol>
