--- a/PMS-PropertyHapa.Staff/Views/Accounting/Index.cshtml
+++ b/PMS-PropertyHapa.Staff/Views/Accounting/Index.cshtml
@@ -6,12 +6,14 @@
     <div class="container-fluid">
         <div class="page-title">
             <div class="row">
-                <div class="col-12">
+                <div class="col-12 col-sm-6">
                     <h3>Accounting</h3>
+                </div>
+                <div class="col-12 col-sm-6">
                     <ol class="breadcrumb">
-                        <li class="breadcrumb-item"><a class="home-item" href="index.html"><i data-feather="home" fa-3x"></i></a></li>
+                        <li class="breadcrumb-item"><a href="Index"><i data-feather="home"></i></a></li>
                         <li class="breadcrumb-item">Accounting</li>
-                        <li class="breadcrumb-item active">Index</li>
+                        <li class="breadcrumb-item active">List</li>
                     </ol>
                 </div>
             </div>
