--- a/PMS-PropertyHapa.Staff/Views/Communication/AddCommunication.cshtml
+++ b/PMS-PropertyHapa.Staff/Views/Communication/AddCommunication.cshtml
@@ -99,7 +99,7 @@
                         <ol class="breadcrumb mb-0">
                             <!-- mb-0 removes the bottom margin -->
                             <li class="breadcrumb-item">
-                                <a href="index.html">
+                                <a href="@Url.Action("Index", "Communication")">
                                     <i data-feather="home"></i>
                                 </a>
                             </li>
