--- a/PMS-PropertyHapa.Staff/Views/Communication/Email.cshtml
+++ b/PMS-PropertyHapa.Staff/Views/Communication/Email.cshtml
@@ -10,7 +10,7 @@
                 <div class="col-12">
                     <h3>Coming Soon</h3>
                     <ol class="breadcrumb">
-                        <li class="breadcrumb-item"><a class="home-item" href="index.html"><i data-feather="home"></i></a></li>
+                        <li class="breadcrumb-item"><a class="home-item" href="@Url.Action("Index", "Communication")"><i data-feather="home"></i></a></li>
                         <li class="breadcrumb-item">Coming Soon</li>
                         <li class="breadcrumb-item active">Coming Soon</li>
                     </ol>
