--- a/PMS-PropertyHapa.Staff/Views/Communication/Index.cshtml
+++ b/PMS-PropertyHapa.Staff/Views/Communication/Index.cshtml
@@ -19,7 +19,7 @@
                 </div>
                 <div class="col-12 col-sm-6">
                     <ol class="breadcrumb">
-                        <li class="breadcrumb-item"><a href="@Url.Action("Index", "Communication")"><i class="fas fa-home"></i></a></li>
+                        <li class="breadcrumb-item"><a href="@Url.Action("Index", "Communication")"><i data-feather="home"></i></a></li>
                         <li class="breadcrumb-item">Communication</li>
                         <li class="breadcrumb-item active">List</li>
                     </ol>
