--- a/PMS-PropertyHapa.Staff/Views/PropertyTypes/Index.cshtml
+++ b/PMS-PropertyHapa.Staff/Views/PropertyTypes/Index.cshtml
@@ -13,7 +13,7 @@
                 <div class="col-12">
                     <h3>Property Types List</h3>
                     <ol class="breadcrumb">
-                        <li class="breadcrumb-item"><a class="home-item" href="/Home/Index"><i data-feather="home"></i></a></li>
+                        <li class="breadcrumb-item"><a class="home-item" href="Index"><i data-feather="home"></i></a></li>
                         <li class="breadcrumb-item active">Property Type</li>
                     </ol>
                 </div>
