--- a/PMS-PropertyHapa.Staff/Views/Tenant/Index.cshtml
+++ b/PMS-PropertyHapa.Staff/Views/Tenant/Index.cshtml
@@ -21,7 +21,7 @@
                 </div>
                 <div class="col-12 col-sm-6">
                     <ol class="breadcrumb">
-                        <li class="breadcrumb-item"><a href="/Tenant/Index"><i data-feather="home"></i></a></li>
+                        <li class="breadcrumb-item"><a href="Index"><i data-feather="home"></i></a></li>
                         <li class="breadcrumb-item">Tenant</li>
                         <li class="breadcrumb-item active">Index</li>
                     </ol>
