--- a/PMS-PropertyHapa.Staff/Views/AccountSubType/Index.cshtml
+++ b/PMS-PropertyHapa.Staff/Views/AccountSubType/Index.cshtml
@@ -13,7 +13,7 @@
                 </div>
                 <div class="col-12 col-sm-6">
                     <ol class="breadcrumb">
-                        <li class="breadcrumb-item"><a href="index.html"><i data-feather="home"></i></a></li>
+                        <li class="breadcrumb-item"><a href="/Accounting/Index"><i data-feather="home"></i></a></li>
                         <li class="breadcrumb-item">Account Sub Type</li>
                         <li class="breadcrumb-item active">List</li>
                     </ol>
@@ -78,12 +78,21 @@
                                                                     <td class="tableFontSize">@item.AccountType</td>
                                                                     <td class="tableFontSize">@item.Description</td>
                                                                     <td class="tableFontSize">
-                                                                        <a class="btn btn-secondary" onclick="editAccountSubType(@item.AccountSubTypeId)">
-                                                                            <i class="fa fa-edit"></i> Edit
-                                                                        </a>
-                                                                        <a class="btn btn-danger" onclick="deleteAccountSubType(@item.AccountSubTypeId)">
-                                                                            <i class="fa fa-trash"></i> Delete
-                                                                        </a>
+                                                                        <div class="dropdown-basic">
+                                                                            <div class="dropdown">
+                                                                                <div class="btn-group mb-0">
+                                                                                    <button class="dropbtn btn-danger" type="button">Action <span><i class="icofont icofont-arrow-down"></i></span></button>
+                                                                                    <div class="dropdown-content">
+                                                                                        <a class="btn btn-secondary" onclick="editAccountSubType(@item.AccountSubTypeId)">
+                                                                                            <i class="fa fa-edit"></i> Edit
+                                                                                        </a>
+                                                                                        <a class="btn btn-secondary" onclick="deleteAccountSubType(@item.AccountSubTypeId)">
+                                                                                            <i class="fa fa-trash"></i> Delete
+                                                                                        </a>
+                                                                                    </div>
+                                                                                </div>
+                                                                            </div>
+                                                                        </div>
                                                                     </td>
                                                                 </tr>
                                                             }
