--- a/PMS-PropertyHapa.Staff/Views/Accounting/AssestExpense.cshtml
+++ b/PMS-PropertyHapa.Staff/Views/Accounting/AssestExpense.cshtml
@@ -8,10 +8,12 @@
     <div class="container-fluid">
         <div class="page-title">
             <div class="row">
-                <div class="col-12">
+                <div class="col-12 col-sm-6">
                     <h3>Assest Expense</h3>
+                </div>
+                <div class="col-12 col-sm-6">
                     <ol class="breadcrumb">
-                        <li class="breadcrumb-item"><a class="home-item" href="index.html"><i data-feather="home"></i></a></li>
+                        <li class="breadcrumb-item"><a class="home-item" href="Index"><i data-feather="home"></i></a></li>
                         <li class="breadcrumb-item">Assest Expense</li>
                         <li class="breadcrumb-item active">list</li>
                     </ol>
