--- a/PMS-PropertyHapa.Staff/Views/Accounting/Deposit.cshtml
+++ b/PMS-PropertyHapa.Staff/Views/Accounting/Deposit.cshtml
@@ -10,7 +10,7 @@
                 <div class="col-12">
                     <h3>Bank Deposit</h3>
                     <ol class="breadcrumb">
-                        <li class="breadcrumb-item"><a class="home-item" href="index.html"><i data-feather="home"></i></a></li>
+                        <li class="breadcrumb-item"><a class="home-item" href="Index"><i data-feather="home"></i></a></li>
                         <li class="breadcrumb-item">Bank Deposit</li>
                         <li class="breadcrumb-item active">list</li>
                     </ol>
