--- a/PMS-PropertyHapa.Staff/Views/Applications/EditApplication.cshtml
+++ b/PMS-PropertyHapa.Staff/Views/Applications/EditApplication.cshtml
@@ -35,7 +35,7 @@
                 </div>
                 <div class="col-12 col-sm-6">
                     <ol class="breadcrumb">
-                        <li class="breadcrumb-item"><a href="index.html"><i data-feather="home"></i></a></li>
+                        <li class="breadcrumb-item"><a href="/Applications/ViewApplication"><i data-feather="home"></i></a></li>
                         <li class="breadcrumb-item">Application</li>
                         <li class="breadcrumb-item active">List</li>
                     </ol>
