--- a/PMS-PropertyHapa.Staff/Views/Applications/ViewApplication.cshtml
+++ b/PMS-PropertyHapa.Staff/Views/Applications/ViewApplication.cshtml
@@ -17,7 +17,7 @@
                 </div>
                 <div class="col-12 col-sm-6">
                     <ol class="breadcrumb">
-                        <li class="breadcrumb-item"><a href="index.html"><i data-feather="home"></i></a></li>
+                        <li class="breadcrumb-item"><a href="ViewApplication"><i data-feather="home"></i></a></li>
                         <li class="breadcrumb-item">Application</li>
                         <li class="breadcrumb-item active">List</li>
                     </ol>
@@ -85,12 +85,21 @@
                                             <td class="tableFontSize align-middle">@application.MoveInDate </td>
                                             <td class="tableFontSize align-middle">@application.AddedDate </td>
                                             <td class="tableFontSize align-middle">
-                                                <a class="btn btn-secondary me-1" onclick="editApplications(@application.ApplicationId)">
-                                                    <i class="fa fa-pencil"></i> Edit
-                                                </a>
-                                                <a class="btn btn-danger" onclick="deleteApplications(@application.ApplicationId)">
-                                                    <i class="fa fa-trash"></i> Delete
-                                                </a>
+                                                <div class="dropdown-basic">
+                                                    <div class="dropdown">
+                                                        <div class="btn-group mb-0">
+                                                            <button class="dropbtn btn-danger" type="button">Action <span><i class="icofont icofont-arrow-down"></i></span></button>
+                                                            <div class="dropdown-content">
+                                                                <a class="btn btn-secondary me-1" onclick="editApplications(@application.ApplicationId)">
+                                                                    <i class="fa fa-pencil"></i> Edit
+                                                                </a>
+                                                                <a class="btn btn-secondary" onclick="deleteApplications(@application.ApplicationId)">
+                                                                    <i class="fa fa-trash"></i> Delete
+                                                                </a>
+                                                            </div>
+                                                        </div>
+                                                    </div>
+                                                </div>
                                             </td>
                                         </tr>
                                     }
