--- a/PMS-PropertyHapa.Staff/Views/Assests/AddAssest.cshtml
+++ b/PMS-PropertyHapa.Staff/Views/Assests/AddAssest.cshtml
@@ -203,7 +203,7 @@
                         <ol class="breadcrumb mb-0">
                             <!-- mb-0 removes the bottom margin -->
                             <li class="breadcrumb-item">
-                                <a href="index.html">
+                                <a href="@Url.Action("Index","Assests")">
                                     <i data-feather="home"></i>
                                 </a>
                             </li>
