--- a/PMS-PropertyHapa.Staff/Views/Reports/TaskReports.cshtml
+++ b/PMS-PropertyHapa.Staff/Views/Reports/TaskReports.cshtml
@@ -16,7 +16,7 @@
                 </div>
                 <div class="col-12 col-sm-6">
                     <ol class="breadcrumb">
-                        <li class="breadcrumb-item"><a href="index.html"><i data-feather="home"></i></a></li>
+                        <li class="breadcrumb-item"><a href="TaskReports"><i data-feather="home"></i></a></li>
                         <li class="breadcrumb-item">Task</li>
                         <li class="breadcrumb-item active">List</li>
                     </ol>
@@ -31,12 +31,11 @@
             <div class="col-12 col-md-12 mb-4">
                 <div class="card">
                     <div class="card-header d-flex justify-content-between align-items-center">
-                        <h4 class="card-title mb-0 flex-grow-1 font-weight-bold">Filters</h4>
-                        @* <a href="@Url.Action("OccupancyOverview","Calendar")" class="btn btn-primary">Occupancy Overview</a> *@
+                       <h4 class="card-title mb-0 flex-grow-1 font-weight-bold">Filters</h4>
                     </div>
                     <div class="card-body">
                         <div class="row mt-1 d-flex">
-                            <div class="col-lg-4 col-md-4">
+                            <div class="col-lg-3 col-md-3">
                                 <div class="row">
                                     <label class="col-sm-12 mb-0 font-weight-bold">Property</label>
                                     <div col-sm-12>
@@ -44,7 +43,15 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-lg-4 col-md-4">
+                            <div class="col-lg-3 col-md-3">
+                                <div class="row">
+                                    <label class="col-sm-12 mb-0 font-weight-bold">Unit</label>
+                                    <div col-sm-12>
+                                        <select id="reportUnitFilter" multiple name="reportUnitFilter" class="form-control select2"></select>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-lg-3 col-md-3">
                                 <div class="row">
                                     <label class="col-sm-12 mb-0 font-weight-bold">Due Date</label>
                                     <div class="col-sm-12">
@@ -52,7 +59,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-lg-4 col-md-4">
+                            <div class="col-lg-3 col-md-3">
                                 <div class="row">
                                     <label class="col-sm-12 mb-0 font-weight-bold">Task Start/End Date</label>
                                     <div class="col-sm-12">
@@ -67,6 +74,13 @@
                         <button onclick="applyFilters()" type="button" class="btn btn-primary font-weight-bold" style="padding-left: 2.75rem  !important; padding-right: 2.75rem  !important;">Apply</button>
                     </div>
                     <div class="card-body">
+                        <div class="d-flex justify-content-start mb-3">
+                            <button id="copyButton" class="btn btn-secondary mr-1">Copy</button>
+                            <button id="csvButton" class="btn btn-secondary mr-1">CSV</button>
+                            <button id="excelButton" class="btn btn-secondary mr-1">Excel</button>
+                            <button id="pdfButton" class="btn btn-secondary mr-1">PDF</button>
+                            <button id="printButton" class="btn btn-secondary mr-1">Print</button>
+                        </div>
                         <div class="table-responsive">
                             <table class="table" id="taskReportsTbl">
                                 <thead>
@@ -76,6 +90,7 @@
                                         <th scope="col" class="tableHeaderbg">Start Date</th>
                                         <th scope="col" class="tableHeaderbg">Expiring Date</th>
                                         <th scope="col" class="tableHeaderbg">Property</th>
+                                        <th scope="col" class="tableHeaderbg">Unit</th>
                                         <th scope="col" class="tableHeaderbg">Status</th>
                                     </tr>
                                 </thead>
@@ -91,10 +106,17 @@
     </div>
 </div>
 
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<script src="https://cdn.datatables.net/1.10.22/js/jquery.dataTables.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.3.1/jspdf.umd.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.5.23/jspdf.plugin.autotable.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.16.9/xlsx.full.min.js"></script>
 
 
 <script>
     var propertiesIdsList = [];
+    var unitsIdsList = [];
     var taskStartDateFilter = null;
     var taskEndDateFilter = null;
     var taskDueStartDateFilter = null;
@@ -105,6 +127,14 @@
         initDueDatePickers();
         populateDropDowns();
         loadTaskRequestDataTable();
+        $('#reportPropertyFilter').on('change', function () {
+            if ($("#reportPropertyFilter").val() != null) {
+                populateUnits($("#reportPropertyFilter").val().join(','));
+            } else {
+                populateUnits("");
+            }
+        });
+        populateUnits("");
     });
 
     var initDatePickers = function () {
@@ -149,6 +179,28 @@
         });
     };
 
+    function populateUnits(propertyIds) {
+        $.ajax({
+            url: '/Lease/ByProperties',
+            method: 'GET',
+            data: { propertyIds: propertyIds },
+            dataType: 'json', 
+            success: function (response) {
+                var units = response;
+                var $reportUnitFilter = $('#reportUnitFilter');
+                $reportUnitFilter.empty();
+
+                units.forEach(function (unit) {
+                    var option = `<option value="${unit.UnitId}">${unit.UnitName}</option>`;
+                    $reportUnitFilter.append(option);
+                });
+            },
+            error: function (xhr, status, error) {
+                console.error('Error fetching units:', error); 
+            }
+        });
+    }
+
     function populateDropDowns() {
         $.ajax({
             url: '@Url.Action("GetProperties", "Communication")',
@@ -157,10 +209,21 @@
             success: function (data) {
                 var vendorPropertyDropdown = document.getElementById('reportPropertyFilter');
                 // vendorPropertyDropdown.innerHTML = ''; // Clear existing options
+
+                while (vendorPropertyDropdown.options.length > 0) {
+                    vendorPropertyDropdown.remove(0);
+                }
+
+                // Add the "Select All" option
+                var selectAllOption = new Option('Select All Properties', '');
+                vendorPropertyDropdown.appendChild(selectAllOption);
+
                 data.forEach(function (item) {
                     var option = new Option(item.BuildingNo + " - " + item.BuildingName, item.AssetId);
                     vendorPropertyDropdown.appendChild(option);
                 });
+
+                $('#reportPropertyFilter').select2();
             }
         });
     }
@@ -168,9 +231,12 @@
     function clearFilters() {
         $("#reportPropertyFilter").empty();
         populateDropDowns();
+        $("#reportUnitFilter").empty();
+        populateUnits();
         $("#createdAtRange").val('');
         $("#createdDueRange").val('');
         propertiesIdsList = [];
+        unitsIdsList = [];
         taskStartDateFilter = null;
         taskEndDateFilter = null;
         taskDueStartDateFilter = null;
@@ -181,6 +247,7 @@
 
     function applyFilters() {
         propertiesIdsList = $("#reportPropertyFilter").val();
+        unitsIdsList = $("#reportUnitFilter").val();
         if ($("#createdAtRange").val()) {
             var dates = $("#createdAtRange").val().split('-');
             taskStartDateFilter = dates[0];
@@ -213,6 +280,7 @@
                 data: function (d) {
                     return JSON.stringify({
                         PropertiesIds: propertiesIdsList,
+                        UnitsIds: unitsIdsList,
                         TaskStartDateFilter: taskStartDateFilter,
                         TaskEndDateFilter: taskEndDateFilter,
                         TaskDueStartDateFilter: taskDueStartDateFilter,
@@ -249,15 +317,86 @@
                     }
                 },
                 { data: "Property" },
-                {
-                    data: "Status",
-                    render: function (data, type, row) {
-                        return data ? "Yes" : "No";
-                    }
-                }
+                { data: "Unit" },
+                { data: "Status" }
             ]
         });
     }
+
+    function exportToCSV() {
+        var csv = [];
+        var rows = document.querySelectorAll("table tr");
+        for (var i = 0; i < rows.length; i++) {
+            var row = [], cols = rows[i].querySelectorAll("td, th");
+            for (var j = 0; j < cols.length; j++)
+                row.push(cols[j].innerText);
+            csv.push(row.join(","));
+        }
+        downloadCSV(csv.join("\n"), 'TaskReport.csv');
+    }
+
+    function downloadCSV(csv, filename) {
+        var csvFile;
+        var downloadLink;
+        csvFile = new Blob([csv], { type: "text/csv" });
+        downloadLink = document.createElement("a");
+        downloadLink.download = filename;
+        downloadLink.href = window.URL.createObjectURL(csvFile);
+        downloadLink.style.display = "none";
+        document.body.appendChild(downloadLink);
+        downloadLink.click();
+    }
+
+
+
+    function exportToPDF() {
+        const { jsPDF } = window.jspdf;
+        const doc = new jsPDF();
+
+        doc.autoTable({ html: '#taskReportsTbl' });
+        doc.save('TaskReport.pdf');
+    }
+
+    $('#copyButton').on('click', function () {
+        var text = $("#taskReportsTbl").clone().find('th, td').each(function () {
+            $(this).text($(this).text());
+        }).end().prop('outerHTML');
+
+        var $temp = $("<textarea>");
+        $("body").append($temp);
+        $temp.val(text).select();
+        document.execCommand("copy");
+        $temp.remove();
+
+        Swal.fire({
+            icon: 'success',
+            title: 'Copied to Clipboard',
+            showConfirmButton: false,
+            timer: 1500
+        });
+    });
+
+    function printTable() {
+        window.print();
+    }
+
+
+    $('#csvButton').on('click', function () {
+        exportToCSV();
+    });
+
+    $('#excelButton').on('click', function () {
+        var wb = XLSX.utils.table_to_book(document.getElementById('taskReportsTbl'), { sheet: "Sheet1" });
+        XLSX.writeFile(wb, "TaskReport.xlsx");
+    });
+
+    $('#pdfButton').on('click', function () {
+        exportToPDF();
+    });
+
+    $('#printButton').on('click', function () {
+        printTable();
+    });
 
 
 </script>
