--- a/PMS-PropertyHapa.Staff/Views/Tenant/AddTenant.cshtml
+++ b/PMS-PropertyHapa.Staff/Views/Tenant/AddTenant.cshtml
@@ -30,11 +30,11 @@
                     <ol class="breadcrumb">
                         @if (Model?.TenantId == null)
                         {
-                            <li class="breadcrumb-item"><a href="@Url.Action("AddTenant", "Tenant")"><i data-feather="home"></i></a></li>
+                            <li class="breadcrumb-item"><a href="@Url.Action("Index", "Tenant")"><i data-feather="home"></i></a></li>
                         }
                         else
                         {
-                            <li class="breadcrumb-item"><a href="@Url.Action("EditTenant", "Tenant")"><i data-feather="home"></i></a></li>
+                            <li class="breadcrumb-item"><a href="@Url.Action("Index", "Tenant")"><i data-feather="home"></i></a></li>
                         }
 
 
