--- a/PMS-PropertyHapa.Staff/Views/User/Index.cshtml
+++ b/PMS-PropertyHapa.Staff/Views/User/Index.cshtml
@@ -26,7 +26,7 @@
                 <div class="col-12">
                     <h3>App Tenant List</h3>
                     <ol class="breadcrumb">
-                        <li class="breadcrumb-item"><a class="home-item" href="/User/Index"><i data-feather="home"></i></a></li>
+                        <li class="breadcrumb-item"><a class="home-item" href="Index"><i data-feather="home"></i></a></li>
                         <li class="breadcrumb-item">User</li>
                         <li class="breadcrumb-item active">App Tenant</li>
                     </ol>
