--- a/PMS-PropertyHapa.Staff/Views/User/Update.cshtml
+++ b/PMS-PropertyHapa.Staff/Views/User/Update.cshtml
@@ -10,7 +10,7 @@
                 <div class="col-12">
                     <h3>Update Profile</h3>
                     <ol class="breadcrumb">
-                        <li class="breadcrumb-item"><a class="home-item" href="index.html"><i data-feather="home"></i></a></li>
+                        <li class="breadcrumb-item"><a class="home-item" href="Index"><i data-feather="home"></i></a></li>
                         <li class="breadcrumb-item">Dashboard</li>
                         <li class="breadcrumb-item active">Update Profile</li>
                     </ol>
